# payback-assistant

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.langfuse.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml
app/: config.py
app/db/: models.py  session.py
apps/backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
apps/backend/app/: config.py  main.py  schemas.py
apps/backend/app/agent/: __init__.py  chains.py  checkpointer.py  classification.py  graph.py  intents.py  runner.py  state.py
apps/backend/app/db/: models.py
apps/backend/app/embeddings/: __init__.py  base.py  dims.py  factory.py  local.py  openai.py  vertex.py
apps/backend/app/llm/: __init__.py  cost.py  factory.py  tracing.py
apps/backend/app/products/: __init__.py  router.py  schemas.py  service.py
apps/backend/app/retrieval/: __init__.py  _rows.py  base.py  factory.py  fusion.py  hybrid.py  pgvector.py  session.py  types.py  vector_index.py
apps/backend/app/retrieval/filtering/: __init__.py  absolute.py  autocut.py  base.py  factory.py  none.py  relative.py
apps/backend/app/retrieval/ranking/: __init__.py  _common.py  base.py  constrained.py  factory.py  mmr.py  zscore.py
apps/backend/app/shared/: partner.py
apps/backend/app/voice/: __init__.py  dictation.py  router.py
apps/backend/data/: catalog_loader.py  embed.py  eval.py  eval_queries.json  fetch_off.py  init_bq.py  init_db.py  schema.py  seed.py  sinks.py
apps/backend/data/adapters/: __init__.py  amazon.py  base.py  dm.py  edeka.py  normalize.py
apps/backend/data/catalogs/: amazon.json  dm.json  edeka.json
apps/backend/db/: init.sql
apps/backend/tests/: conftest.py  test_adapters.py  test_agent_convergence.py  test_agent_logic.py  test_assist_api.py  test_bigquery_retriever.py  test_catalog_loader.py  test_comparison.py  test_config_dsn.py  test_cost.py  test_decline_handoff.py  test_embed_seed.py  test_embedding_sink.py  test_embeddings.py  test_filtering.py  test_fusion.py  test_health.py  test_products_api.py  test_ranking.py  test_retrieval.py  test_retriever_factory.py  test_search_api.py  test_tracing.py
apps/frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/products/: page.tsx  products-page.tsx
apps/frontend/app/widget/: page.tsx
apps/frontend/components/: PaybackLogo.tsx  WidgetEmbed.tsx
apps/frontend/components/data-table/: column-sizing.ts  data-table-column-header.tsx  data-table-footer.tsx  data-table-row.tsx  data-table-view-options.tsx  data-table.tsx  index.ts
apps/frontend/components/partners/: partner-logos.tsx
apps/frontend/components/products/: products-columns.tsx  products-toolbar.tsx  (+1 more)
apps/frontend/hooks/: useAssistChat.ts  useAudioDevices.ts  useDictation.ts
apps/frontend/lib/: products.ts  types.ts  voice-sounds.ts
apps/frontend/public/: widget.js
demo/: README.md  queries.json  run_demo.py
docs/: README.md  architecture.md
docs/decisions/: 0001-hybrid-retrieval-with-rrf.md  0002-fair-cross-partner-ranking.md  0003-pgvector-with-retriever-interface.md  0004-provider-agnostic-embeddings.md  0005-candidate-filtering.md  0006-intent-agent-langgraph.md  0007-bigquery-retrieval-backend.md  README.md
docs/images/: agent_graph.mmd
infra/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/gcp/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
observability/: README.md  docker-compose.langfuse.yml
perf/: README.md  run_perf.py
tests/: test_models.py
(+24 files in other folders)
