[project]
name = "payback-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "babel>=2.18.0",
    "fastapi>=0.138.0",
    # Intent agent: LangGraph state machine + LiteLLM gateway (provider-agnostic LLM).
    # Major-version caps — these AI libs break across majors; uv.lock pins exact prod versions.
    "langgraph>=1.2,<2",
    "langchain-core>=1.4,<2",
    "langchain-litellm>=0.7,<1",
    "litellm>=1.90,<2",
    # Durable checkpointer so paused (clarify) conversations survive restarts / multiple
    # instances — the production swap for the in-process MemorySaver.
    "langgraph-checkpoint-postgres>=3.1,<4",
    # psycopg[binary] bundles the precompiled libpq so the checkpointer connects without a
    # system libpq install (the plain psycopg pulled in transitively has no pq wrapper).
    "psycopg[binary]>=3.2,<4",
    "pgvector>=0.4.2",
    "pint>=0.25.3",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    # Managed embedding providers (swappable via EMBEDDING_PROVIDER). Embedder impls lazy-import
    # their SDK, so only the configured one initializes a client.
    "google-cloud-aiplatform>=1.130.0",
    "openai>=2.9.0",
    # BigQuery vector store (RETRIEVER_BACKEND=bigquery). A direct dependency — the BigQuery
    # retriever lazy-imports it, but depending on it explicitly (not transitively via aiplatform)
    # keeps the import safe if that chain ever changes.
    "google-cloud-bigquery>=3.42,<4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0",
    # Offline IR metrics (nDCG/Recall/MRR) for the A/B eval harness (data/eval.py).
    # Dev-only: it must never enter the request path (see app/retrieval/fusion.py).
    "ranx>=0.3.20",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Run `async def test_*` directly (the retrieval/embed tests run real SQL on Postgres).
asyncio_mode = "auto"
# Share ONE event loop across the suite. The app's pooled async engine binds connections
# to the loop that opened them; a per-test loop would reuse a connection on a new loop and
# raise "Event loop is closed". One loop mirrors production (a single long-lived loop).
# Both tests AND async fixtures must use the same (session) loop, or a fixture-created
# connection (e.g. db_session) ends up "attached to a different loop" than its test.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
